<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.githubusers.viewmodels.RxJavaGithubUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.UserDetailFragment">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:visibility="@{viewModel.loading}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:visibility="@{!viewModel.loading}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/standard_margin">

                <LinearLayout
                    android:id="@+id/github_user_avatar_clipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/github_user_image_clipper"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:clipToOutline="@{true}" >

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/github_user_avatar"
                        app:imageUrl="@{viewModel.githubUser.avatarURL}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/github_user_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/standard_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/github_user_avatar_clipper"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/github_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.githubUser.name}"
                        style="@style/HeaderTextView"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/quarter_standard_margin"
                        android:text="@{@string/username_format(viewModel.githubUser.userName)}"
                        style="@style/SecondaryTextView"/>

                </LinearLayout>

                <Button
                    android:id="@+id/favourite_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:background="@drawable/main_button_background"
                    android:text="@{(viewModel.githubUser.favourite == true) ? @string/removeFromFavourite : @string/addToFavourite}"
                    android:onClick="@{() -> viewModel.insertOrDeleteGithubUserFromRoom()}"
                    style="@style/BasicButton"
                    app:layout_constraintTop_toBottomOf="@id/github_user_avatar_clipper"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:layout_marginBottom="@dimen/standard_margin"
                    android:text="@{viewModel.githubUser.bio != null ? viewModel.githubUser.bio : @string/no_bio}"
                    style="@style/SecondaryTextView"
                    app:layout_constraintTop_toBottomOf="@id/favourite_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    app:visibility="@{viewModel.githubUser.email != null}"
                    app:layout_constraintTop_toBottomOf="@id/bio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/email"
                        style="@style/BasicTextView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{viewModel.githubUser.email}"
                        style="@style/SecondaryTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    app:visibility="@{viewModel.githubUser.location != null}"
                    app:layout_constraintTop_toBottomOf="@id/email_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/location"
                        style="@style/BasicTextView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{viewModel.githubUser.location}"
                        style="@style/SecondaryTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/public_repos_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    app:visibility="@{viewModel.githubUser.public_repos != null}"
                    app:layout_constraintTop_toBottomOf="@id/location_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/public_repositories"
                        style="@style/BasicTextView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.valueOf(viewModel.githubUser.public_repos)}"
                        style="@style/SecondaryTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/followers_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    app:visibility="@{viewModel.githubUser.followers != null}"
                    app:layout_constraintTop_toBottomOf="@id/public_repos_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/followers"
                        style="@style/BasicTextView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.valueOf(viewModel.githubUser.followers)}"
                        style="@style/SecondaryTextView" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/following_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    app:visibility="@{viewModel.githubUser.following != null}"
                    app:layout_constraintTop_toBottomOf="@id/followers_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/following"
                        style="@style/BasicTextView" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{String.valueOf(viewModel.githubUser.following)}"
                        style="@style/SecondaryTextView" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>